prepend all assets done

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,10 +1,10 @@
 
-    <link rel="stylesheet" media="all" href="/assets/css/vendor/animate.css" />
-    <link rel="stylesheet" media="all" href="/assets/css/vendor/font-awesome.css" />
-    <link rel="stylesheet" media="all" href="/assets/css/vendor/linear-icons.css" />
-    <link rel="stylesheet" media="all" href="/assets/css/vendor/owl.carousel.css" />
-    <link rel="stylesheet" media="all" href="/assets/css/vendor/jquery.lavalamp.css" />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/vendor/animate.css" | prepend:site.baseurl }} />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/vendor/font-awesome.css" | prepend:site.baseurl }} />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/vendor/linear-icons.css" | prepend:site.baseurl }} />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/vendor/owl.carousel.css" | prepend:site.baseurl }} />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/vendor/jquery.lavalamp.css" | prepend:site.baseurl }} />
 
     <!-- Template stylesheets -->
 
-    <link rel="stylesheet" media="all" href="/assets/css/style.css" />
+    <link rel="stylesheet" media="all" href={{ "/assets/css/style.css" | prepend:site.baseurl }} />
