--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,14 +1,14 @@
-<script src="/assets/js/vendor/jquery.min.js"></script>
-<script src="/assets/js/vendor/bootstrap.bundle.js"></script>
-<script src="/assets/js/vendor/in-view.min.js"></script>
-<script src="/assets/js/vendor/jquery.lavalamp.js"></script>
-<script src="/assets/js/vendor/owl.carousel.js"></script>
-<script src="/assets/js/vendor/rellax.js"></script>
-<script src="/assets/js/vendor/wow.js"></script>
-<script src="/assets/js/vendor/tabzy.js"></script>
-<script src="/assets/js/vendor/isotope.pkgd.js"></script>
+<script src={{ "/assets/js/vendor/jquery.min.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/bootstrap.bundle.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/in-view.min.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/jquery.lavalamp.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/owl.carousel.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/rellax.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/wow.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/tabzy.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/vendor/isotope.pkgd.js"  | prepend:site.baseurl }} />></script>
 
 <!-- Template Scripts -->
 
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/custom.js"></script>
+<script src={{ "/assets/js/main.js"  | prepend:site.baseurl }} />></script>
+<script src={{ "/assets/js/custom.js"  | prepend:site.baseurl }} />></script>
