fontmatter added for title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
 
   <!-- Title -->
 
-  <title>Reveal - Agency template</title>
+  <title>{{ page.title }}</title>
 
   <!-- Vendor stylesheets -->
   {% include css.html %}
