--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,12 @@
     
         <meta name="description" content="Extended Bootstrap 4 Template">
         <meta name="author" content="Goran Hrustic">
-        <link rel="icon" href="../assets/svg/favicon.ico">
+        <!-- <link rel="icon" href="../assets/svg/favicon.ico"> -->
     
         <!-- Title -->
         {% include css.html %}
     
-        <title>Reveal - Agency template</title>
+        <title>{{ page.title }}</title>
     
     </head>
   <body>
